--- a/app/src/main/res/layout/activity_warn_benzene.xml
+++ b/app/src/main/res/layout/activity_warn_benzene.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Drug.Warn.WarnPvaActivity">
+    tools:context=".Drug.Warn.WarnBenzeneActivity">
 
 </android.support.constraint.ConstraintLayout>
