--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,6 +86,7 @@
                 android:textColor="#ffffff"
                 android:background="@color/colorPrimaryDark"
                 android:text="로그인"
+                android:id="@+id/loginBtn"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"/>
 
