--- a/app/src/main/res/layout/activity_safety_rule.xml
+++ b/app/src/main/res/layout/activity_safety_rule.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_safety_rule"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.leeph.smartlaps.SafetyRuleActivity">
+    android:padding="16dp"
+    tools:context="com.example.leeph.smartlaps.SafetyRuleActivity"
+    android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,7 +18,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:elevation="10dp"
+                android:elevation="5dp"
                 android:padding="10dp"
                 android:background="#ffffff"
                 android:layout_width="match_parent"
@@ -29,26 +27,18 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:textColor="@color/colorTitle"
-                    android:textStyle="bold"
-                    android:textSize="15dp"
+                    style="@style/TitleTextView"
                     android:text="@string/laboratorySafetyInstructions"/>
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorContent"
-                    android:textSize="10dp"
+                    style="@style/DetailTextView"
                     android:text="@string/laboratorySafetyInstructionDetail"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:elevation="10dp"
                 android:padding="10dp"
+                android:elevation="5dp"
                 android:background="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,23 +47,15 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:textColor="@color/colorTitle"
-                    android:textStyle="bold"
-                    android:textSize="15dp"
+                    style="@style/TitleTextView"
                     android:text="@string/laboratorySafetyInstruction2"/>
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorContent"
-                    android:textSize="10dp"
+                    style="@style/DetailTextView"
                     android:text="@string/laboratorySafetyInstructionDetail2"/>
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
-</RelativeLayout>
+</android.support.v7.widget.LinearLayoutCompat>
