--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <EditText
@@ -96,8 +96,28 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:text="회원가입"
+                android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/registerButton"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:layout_gravity="center"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:drawableStart="@drawable/ic_live_help_black_24dp"
+                android:drawableLeft="@drawable/ic_live_help_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:text=" 어플리케이션 정보"
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/information"/>
         </LinearLayout>
 
     </LinearLayout>
