--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,4 +17,8 @@
         <item name="android:textColor">@color/colorContent</item>
         <item name="android:textSize">10dp</item>
     </style>
+    <style name="AppTheme.Pop">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
 </resources>
