--- a/app/src/main/res/layout/activity_tool_detail.xml
+++ b/app/src/main/res/layout/activity_tool_detail.xml
@@ -1,9 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Tool.ToolDetailActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txtToolTitle"
+                style="@style/TitleTextView"
+                android:text="@string/strRefluxCondenser" />
+
+            <ImageView
+                android:id="@+id/imgToolTitle"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@drawable/img_reflux_condenser" />
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="잔여수량" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="사용중인 수량" />
+            </android.support.v7.widget.LinearLayoutCompat>
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text=" " />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text=" " />
+            </android.support.v7.widget.LinearLayoutCompat>
+
+
+            <TextView
+                android:id="@+id/txtToolUse"
+                style="@style/DetailTextView"
+                android:text="@string/strRefluxCondenserUse" />
+
+            <TextView
+                android:id="@+id/txtToolCaution"
+                style="@style/DetailTextView"
+                android:text="@string/strRefluxCondenserCaution" />
+
+            <TextView
+                style="@style/TitleTextView"
+                android:text="설치방법 예시" />
+
+            <ImageView
+                android:id="@+id/imgToolDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_reflux_condenser_example" />
+        </android.support.v7.widget.LinearLayoutCompat>
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.v7.widget.LinearLayoutCompat>
